# CodingHub-Test

backend/: pyproject.toml
backend/app/: config.py  deps.py  main.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/routers/: __init__.py  authentication.py  user.py
frontend/app/: pubspec.yaml
frontend/app/lib/: main.dart
frontend/app/lib/pages/: home_page.dart  login_page.dart
frontend/app/lib/repositoreis/: auth_repository.dart
