[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["6410110181 <6410110181@psu.ac.th>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.4"}
sqlmodel = "^0.0.22"
bcrypt = "^4.2.1"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
aiosqlite = "^0.20.0"
python-multipart = "^0.0.20"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
